web/static/css/style.css
/* ... */
input {
	padding: var(--pad-tiny) 1em;
	color: var(--white);
	font-size: var(--font-big);
	font-weight: var(--font-heavy);
	background: var(--yellow-glass);
	border: none;
	border-radius: var(--radius-slight);
	&::placeholder {
		opacity: 1;
		color: var(--white);
	}
}

input[type="submit"] {
	padding: var(--pad-tiny) 1em;
	color: var(--faded-white-glass);
	font-size: var(--font-big);
	font-weight: var(--font-heavy);
	background: var(--orange-glass-less);
	border: none;
	border-radius: var(--radius-slight);
	box-shadow: var(--shadow);
}

/* Absolutely center something both vertically and horizontally. */
.absolute-center {
	position: absolute;
	top: 50%;
	left: 50%;
	transform: translateX(-50%) translateY(-50%);
}

/* For two column setups. */
.row {
	display: flex;
}
.column {
	flex: 50%;
	&.left {
		margin-right: var(--pad-small);
	}
}

/* Styling for the red "rounded-row" tables. */
.rounded-table, .schedule-table {
	width: 100%;
	color: var(--faded-white-glass);
	background: var(--blood-glass);
	border-spacing: 0;
	border-radius: var(--radius);
	box-shadow: var(--shadow);
	&.no-color {
		background: #0000;
		box-shadow: none;
	}
	tbody {
		&:first-child th {
			padding: var(--pad-weeny);
			font-size: var(--font-slight);
			background: var(--maroon);
		}
		tr {
			th:first-child, td:first-child {
				border-top-left-radius: var(--radius);
				border-bottom-left-radius: var(--radius);
			}
			th:last-child, td:last-child {
				border-top-right-radius: var(--radius);
				border-bottom-right-radius: var(--radius);
			}
			td {
				background: var(--blood);
				font-size: var(--font-medium);
				text-align: center;
			}
		}
	}
	.table-spacer {
		height: var(--pad-teeny);
	}
}

/* Login and Registration */

#login-form, #registration-form {
	padding-bottom: var(--pad-small);
	background: var(--orange-glass);
	border-radius: var(--radius);
}

/* End Login and Registration */

/* Home Page */

#countdown {
	text-align: center;
}

#announcements, #logs {
	padding-bottom: var(--pad-tiny);
	.announcement, .log {
		margin: var(--pad-tiny);
		padding: var(--pad-teeny) var(--pad-small);
		background: var(--purple-glass);
		border-radius: var(--radius);
	}
}

/* End Home Page */

/* Prizes */

#balance {
	margin-top: var(--pad-medium);
	text-align: right;
	color: var(--faded-white-glass);
	#points {
		padding: 0 2em;
	}
}

#prizes td {
	padding: var(--pad-tiny) 0;
	.claim {
		padding: var(--pad-tiny) var(--pad-small);
		margin: var(--pad-small) 0;
		color: var(--faded-white-glass);
		font-size: var(--font-medium);
		text-align: center;
		background: var(--blue-purple);
		border: none;
		border-radius: var(--radius);
		&:hover {
			cursor: pointer;
		}
		&.claimed {
			background: gray;
			&:hover {
				cursor: default;
			}
		}
		&.retrieved {
			background: gray;
			&:hover {
				cursor: default;
			}
		}
	}
}
.claim-button{
	min-width: 10em
}


/* End Prizes */

/* Schedule */

#calendar {
	margin-bottom: var(--pad-small);
	.day {
		width: 128px;
		margin-right: var(--pad-small);
		display: inline-block;
		color: var(--faded-white-glass);
		background: var(--blue-purple-alt);
		border-radius: var(--radius);
		box-shadow: var(--shadow);
		.header {
			padding: var(--pad-weeny) var(--pad-small) var(--pad-tiny) var(--pad-small);
			font-size: var(--font-medium);
			font-weight: var(--font-heavier);
			background: var(--dark-purple);
			border-radius: var(--radius);
		}
		.number {
			padding-bottom: var(--pad-small);
			text-align: center;
			font-size: var(--font-big);
			font-weight: var(--font-heavier);
		}
		&.today {
			background: var(--dark-peach);
			.header {
				background: var(--peach);
				box-shadow: none;
			}
		}
	}
}

#schedule {
	.map img {
		padding: var(--pad-small) 0;
		margin-left: var(--pad-tiny);
		max-width: 200px;
	}
	.info, .description {
		padding-top: var(--pad-small);
		vertical-align: top;
		p {
			margin-bottom: 0;
			margin-top: 0;
			padding-left: var(--pad-small);
			text-align: left;
		}
		.time {
			padding: var(--pad-tiny) var(--pad-small);
			margin-right: var(--pad-tiny);
			background: var(--maroon);
			border-radius: var(--radius);
		}
	}
	.event-current {
		td {
			background-color: var(--dark-peach);
		}
		.time {
			background-color: var(--peach);
		}
	}
}

/* End Schedule */

/* Punch Card */

#punches {
	width: 90%;
	margin: 0 auto;
	padding-top: var(--pad-medium);
	font-size: var(--font-huge);
	border-spacing: 0px 10px;
	tr {
		margin: var(--pad-small);
		border-radius: var(--radius);
		box-shadow: var(--shadow);
		&>:first-child {
			border-radius: var(--radius) 0 0 var(--radius);
		}
		&>:last-child {
			border-radius: 0 var(--radius) var(--radius) 0;
		}
	}
	td {
		padding: var(--pad-small);
		background: var(--orange-glass-less);
		&:not(:first-child):not(:last-child) {
			width: 48px;
		}
	}
	.title {
		padding-left: var(--pad-big);
		text-align: left;
		font-size: var(--font-big);
		font-weight: var(--font-heavier);
	}
	.punch {
		height: 48px;
		width: 48px;
		border-radius: 50%;
		&.true {
			background: var(--purple);
		}
		&.false {
			background: var(--faded-white-glass);
		}
	}
	.spacer {
		width: var(--pad-weeny);
	}
}

/* End Punch Card */

/* Profile */

#profile-points {
	font-size: var(--font-huge);
	font-weight: var(--font-heavier);
}
#profile-edit-form, #profile-password-form, #profile-code-form{
	width: 100%;
  	display: flex;
	justify-content: center;
}
.flexbox-container{
	display: inline-flex;
	flex-wrap: wrap;
	flex-direction: row;
	padding: .5em;
	width: 80%;
	overflow: hidden;
	justify-content: space-between;
	align-content: center;
	gap:1em;
}
.flexbox-container>*{
	width: 40%;
	margin: 2px;
	width: 100%;
	display: flex;
	flex-direction: column;
}
.flexbox-container-child{
	display: flex;
	flex-direction: column;
	flex: 1;
	gap:1em;
}

@-moz-document url-prefix(){
	.flexbox-container-child{
		display: flex;
		flex-direction: column;
		flex: 1;
		gap: .4em;
		
	}
}
/* ... */

